examples/errors/parsing/sort-params-empty-body.cn
sort Foo(a) = { }

main : () [impure] = ()
